# rlz-boekingsmodule

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml
backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
backend/app/: cli.py  config.py  main.py
backend/app/auth/: deps.py  router.py  schemas.py  service.py
backend/app/beheer/: router.py  schemas.py  service.py
backend/app/credentialstore/: router.py  schemas.py  service.py
backend/app/db/: audit.py  migratie_guard.py  models.py  session.py  systeem_actor.py
backend/app/documenten/: afwijzen.py  boeken.py  boekvoorstel.py  checks.py  iban_accordering.py  leverancier_iban.py  models.py  pdf.py  reconciliatie.py  rlz_ids.py  router.py  schemas.py  service.py  statusmachine.py  storage.py  ubl.py  vragen.py  wachtrij.py  webhook.py
backend/app/extractie/: bsn.py  client.py  controle.py  iban.py  service.py
backend/app/geheugen/: engine.py  leerlus.py  models.py  normalisatie.py  router.py  schemas.py  seed.py  service.py
backend/app/rlz/: __init__.py  client.py  credentials.py
backend/app/security/: envelope.py  passwords.py  tokens.py  totp.py
backend/app/sync/: models.py  router.py  schemas.py  service.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py  0002_platform_auth.py  0003_refresh_tokens.py  0004_document_pipeline.py  0005_sync_grootboek_en_caches.py  0006_credential_store.py  0007_zelf_scope_lezen.py  0008_boekflow.py  0009_webhook_outbox.py  0010_project_verplicht.py  0011_taxrate_percentage.py  0012_document_verwijderd.py  0013_alembic_version_leesrecht.py  0014_ai_extractie_toggle.py  0015_handmatig_afmaken_status.py  0016_async_extractie.py  0017_leverancier_voorkeur.py  0018_administratie_is_vastgoed.py  (+6 more)
backend/tests/: conftest.py
(+147 files in other folders)
