[project]
name = "rlz-boekingsmodule"
version = "0.1.0"
description = "RLZ Boekingsmodule backend (Administratiekantoor Nijenhuis)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "pyjwt>=2.9",
    "cryptography>=43.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-env>=1.1",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends(...)-in-default-argument is het idiomatische patroon, geen bug.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# write_integration én read_integration zijn opt-in: een kale pytest-run mag NOOIT de live RLZ-
# testadministratie raken, ook niet alleen-lezend. Expliciet draaien: `make test-write-integration`
# / `make test-read-integration` (of handmatig `pytest -m <marker> --override-ini='addopts='`).
addopts = '-m "not write_integration and not read_integration"'
markers = [
    "write_integration: schrijf-integratietests tegen een echte RLZ-testadministratie (skipt zonder TESTADMIN_* credentials) — opt-in, zie addopts hierboven",
    "read_integration: alleen-lezende integratietests tegen een echte RLZ-administratie (skipt zonder credentials) — ook opt-in, zie addopts hierboven",
]
